--- a/about.html
+++ b/about.html
@@ -91,7 +91,7 @@
                 fanny pack vaporware.
               </p>
               <span class="inline-block h-1 w-10 rounded bg-indigo-500 mt-6 mb-4"></span>
-              <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">name</h2>
+              <h2 class="text-gray-900 font-medium title-font tracking-wider text-sm">Name</h2>
               <p class="text-gray-500">Designation</p>
             </div>
           </div>
