--- a/project.html
+++ b/project.html
@@ -74,7 +74,7 @@
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 1</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0"
+                  <a href="project1.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0"
                     >Learn More
                     <svg
                       class="w-4 h-4 ml-2"
