--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,14 +9,13 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANANTA INTERIORS</title>
-    <meta
-      name="Keywords"
-      content="Ananta Interior, architecture, design,educational building, horizon, furniture, graphics, interior,"
-    />
+    <meta name="Keywords"
+      content="Ananta Interior, architecture, design,educational building, horizon, furniture, graphics, interior," />
     <!-- Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="author" content="GodofLibra" />
   </head>
+
   <body>
     <header class="text-gray-600 body-font">
       <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -68,48 +68,30 @@
         <div class="flex flex-wrap md:-m-2 -m-1">
           <div class="flex flex-wrap w-1/2">
             <div class="md:p-2 p-1 w-1/2">
-              <img
-                alt="gallery"
-                class="w-full object-cover h-full object-center block"
-                src="http://source.unsplash.com/500x300"
-              />
+              <img alt="gallery" class="w-full object-cover h-full object-center block"
+                src="https://dummyimage.com/500x300" />
             </div>
             <div class="md:p-2 p-1 w-1/2">
-              <img
-                alt="gallery"
-                class="w-full object-cover h-full object-center block"
-                src="http://source.unsplash.com/501x301"
-              />
+              <img alt="gallery" class="w-full object-cover h-full object-center block"
+                src="https://dummyimage.com/501x301" />
             </div>
             <div class="md:p-2 p-1 w-full">
-              <img
-                alt="gallery"
-                class="w-full h-full object-cover object-center block"
-                src="http://source.unsplash.com/600x360"
-              />
+              <img alt="gallery" class="w-full h-full object-cover object-center block"
+                src="https://dummyimage.com/600x360" />
             </div>
           </div>
           <div class="flex flex-wrap w-1/2">
             <div class="md:p-2 p-1 w-full">
-              <img
-                alt="gallery"
-                class="w-full h-full object-cover object-center block"
-                src="http://source.unsplash.com/601x361"
-              />
+              <img alt="gallery" class="w-full h-full object-cover object-center block"
+                src="https://dummyimage.com/601x361" />
             </div>
             <div class="md:p-2 p-1 w-1/2">
-              <img
-                alt="gallery"
-                class="w-full object-cover h-full object-center block"
-                src="http://source.unsplash.com/502x302"
-              />
+              <img alt="gallery" class="w-full object-cover h-full object-center block"
+                src="https://dummyimage.com/502x302" />
             </div>
             <div class="md:p-2 p-1 w-1/2">
-              <img
-                alt="gallery"
-                class="w-full object-cover h-full object-center block"
-                src="http://source.unsplash.com/503x303"
-              />
+              <img alt="gallery" class="w-full object-cover h-full object-center block"
+                src="https://dummyimage.com/503x303" />
             </div>
           </div>
         </div>
@@ -138,59 +120,31 @@
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
           <a href="#" class="text-gray-400">
-            <svg
-              fill="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+              viewBox="0 0 24 24">
               <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
             </svg>
           </a>
           <a href="#" class="ml-3 text-gray-400">
-            <svg
-              fill="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+              viewBox="0 0 24 24">
               <path
-                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
-              ></path>
+                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+              </path>
             </svg>
           </a>
           <a href="#" class="ml-3 text-gray-400">
-            <svg
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              class="w-5 h-5" viewBox="0 0 24 24">
               <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
               <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
             </svg>
           </a>
           <a href="#" class="ml-3 text-gray-400">
-            <svg
-              fill="currentColor"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="0"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke="none"
-                d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"
-              ></path>
+            <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+              stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+              <path stroke="none"
+                d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
               <circle cx="4" cy="4" r="2" stroke="none"></circle>
             </svg>
           </a>
@@ -198,4 +152,5 @@
       </div>
     </footer>
   </body>
+
 </html>
