--- a/project1.html
+++ b/project1.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -8,14 +9,13 @@
     <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANANTA INTERIORS</title>
-    <meta
-      name="Keywords"
-      content="Ananta Interior, architecture, design,educational building, horizon, furniture, graphics, interior,"
-    />
+    <meta name="Keywords"
+      content="Ananta Interior, architecture, design,educational building, horizon, furniture, graphics, interior," />
     <!-- Mobile Specific -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <meta name="author" content="GodofLibra" />
   </head>
+
   <body>
     <header class="text-gray-600 body-font">
       <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
@@ -68,11 +68,8 @@
         <div class="flex flex-wrap -m-4">
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
-              <img
-                alt="gallery"
-                class="absolute inset-0 w-full h-full object-cover object-center"
-                src="http://source.unsplash.com/600x360"
-              />
+              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
+                src="https://dummyimage.com/600x360" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
@@ -84,11 +81,8 @@
           </div>
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
-              <img
-                alt="gallery"
-                class="absolute inset-0 w-full h-full object-cover object-center"
-                src="http://source.unsplash.com/601x361"
-              />
+              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
+                src="https://dummyimage.com/601x361" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
@@ -100,11 +94,8 @@
           </div>
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
-              <img
-                alt="gallery"
-                class="absolute inset-0 w-full h-full object-cover object-center"
-                src="http://source.unsplash.com/603x363"
-              />
+              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
+                src="https://dummyimage.com/603x363" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
@@ -116,11 +107,8 @@
           </div>
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
-              <img
-                alt="gallery"
-                class="absolute inset-0 w-full h-full object-cover object-center"
-                src="http://source.unsplash.com/602x362"
-              />
+              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
+                src="https://dummyimage.com/602x362" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Neptune</h1>
@@ -132,11 +120,8 @@
           </div>
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
-              <img
-                alt="gallery"
-                class="absolute inset-0 w-full h-full object-cover object-center"
-                src="http://source.unsplash.com/605x365"
-              />
+              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
+                src="https://dummyimage.com/605x365" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Holden Caulfield</h1>
@@ -148,11 +133,8 @@
           </div>
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
-              <img
-                alt="gallery"
-                class="absolute inset-0 w-full h-full object-cover object-center"
-                src="http://source.unsplash.com/606x366"
-              />
+              <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
+                src="https://dummyimage.com/606x366" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
                 <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Alper Kamu</h1>
@@ -188,59 +170,31 @@
         </p>
         <span class="inline-flex sm:ml-auto sm:mt-0 mt-4 justify-center sm:justify-start">
           <a href="#" class="text-gray-400">
-            <svg
-              fill="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+              viewBox="0 0 24 24">
               <path d="M18 2h-3a5 5 0 00-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 011-1h3z"></path>
             </svg>
           </a>
           <a href="#" class="ml-3 text-gray-400">
-            <svg
-              fill="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
+            <svg fill="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-5 h-5"
+              viewBox="0 0 24 24">
               <path
-                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z"
-              ></path>
+                d="M23 3a10.9 10.9 0 01-3.14 1.53 4.48 4.48 0 00-7.86 3v1A10.66 10.66 0 013 4s-4 9 5 13a11.64 11.64 0 01-7 2c9 5 20 0 20-11.5a4.5 4.5 0 00-.08-.83A7.72 7.72 0 0023 3z">
+              </path>
             </svg>
           </a>
           <a href="#" class="ml-3 text-gray-400">
-            <svg
-              fill="none"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="2"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
+            <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+              class="w-5 h-5" viewBox="0 0 24 24">
               <rect width="20" height="20" x="2" y="2" rx="5" ry="5"></rect>
               <path d="M16 11.37A4 4 0 1112.63 8 4 4 0 0116 11.37zm1.5-4.87h.01"></path>
             </svg>
           </a>
           <a href="#" class="ml-3 text-gray-400">
-            <svg
-              fill="currentColor"
-              stroke="currentColor"
-              stroke-linecap="round"
-              stroke-linejoin="round"
-              stroke-width="0"
-              class="w-5 h-5"
-              viewBox="0 0 24 24"
-            >
-              <path
-                stroke="none"
-                d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"
-              ></path>
+            <svg fill="currentColor" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+              stroke-width="0" class="w-5 h-5" viewBox="0 0 24 24">
+              <path stroke="none"
+                d="M16 8a6 6 0 016 6v7h-4v-7a2 2 0 00-2-2 2 2 0 00-2 2v7h-4v-7a6 6 0 016-6zM2 9h4v12H2z"></path>
               <circle cx="4" cy="4" r="2" stroke="none"></circle>
             </svg>
           </a>
@@ -248,4 +202,5 @@
       </div>
     </footer>
   </body>
+
 </html>
