Added Project1-2-3 and added images

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <!-- <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script> -->
+    <script src="Globalstyle.css"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANANTA INTERIORS</title>
     <meta name="Keywords"
@@ -16,6 +17,7 @@
   </head>
 
   <body>
+    <!-- NAV BAR -->
     <header class="text-gray-600 body-font">
       <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
         <a href="index.html" class="flex title-font font-medium items-center text-gray-900 mb-4 md:mb-0">
@@ -58,6 +60,40 @@
         </button> -->
       </div>
     </header>
+    <!-- NAV BAR -->
+    <!-- Content -->
+    <section class="text-gray-600 body-font">
+      <div class="container px-5 py-24 mx-auto">
+        <div class="flex flex-col text-center w-full mb-12">
+          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">What Are we?</h1>
+
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-base">With 24 years of excellence in architecture, our firm
+            has been at the forefront of designing innovative, functional, and sustainable spaces worldwide. Our
+            portfolio spans across diverse project types, from luxury residences and commercial complexes to
+            institutional and urban developments. We have successfully delivered projects across Australia, the U.S.,
+            Canada, and Southeast Asia, bringing a global perspective and local expertise to every design.</p>
+
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Our approach combines creativity with technical
+            precision, ensuring that each project reflects our
+            commitment to quality, aesthetics, and sustainability. We collaborate closely with clients, understanding
+            their vision and transforming it into architectural masterpieces that stand the test of time. Whether
+            crafting bespoke residences or large-scale developments, we take pride in pushing boundaries and redefining
+            spaces.
+
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+            With a legacy built on trust, innovation, and
+            excellence, we continue to shape the built environment with
+            designs that inspire and endure.
+          </p>
+          <p class="lg:w-2/3 mx-auto leading-relaxed text-base">
+          <h1 class="lg:w-2/3 mx-auto leading-relaxed text-base">
+            <b>Let’s build the future together.</b>
+            </h>
+            </p>
+        </div>
+    </section>
+    <!-- Content -->
+
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-wrap -m-4">
@@ -67,7 +103,8 @@
                 class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100"
                 src="https://dummyimage.com/302x302" />
               <p class="leading-relaxed">
-                Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk.
+                Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1
+                kinfolk.
                 Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid
                 fanny pack vaporware.
               </p>
@@ -82,7 +119,8 @@
                 class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100"
                 src="https://dummyimage.com/300x300" />
               <p class="leading-relaxed">
-                Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk.
+                Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1
+                kinfolk.
                 Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid
                 fanny pack vaporware.
               </p>
@@ -97,7 +135,8 @@
                 class="w-20 h-20 mb-8 object-cover object-center rounded-full inline-block border-2 border-gray-200 bg-gray-100"
                 src="https://dummyimage.com/305x305" />
               <p class="leading-relaxed">
-                Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1 kinfolk.
+                Edison bulb retro cloud bread echo park, helvetica stumptown taiyaki taxidermy 90's cronut +1
+                kinfolk.
                 Single-origin coffee ennui shaman taiyaki vape DIY tote bag drinking vinegar cronut adaptogen squid
                 fanny pack vaporware.
               </p>
