--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <!-- <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script> -->
+    <script src="Globalstyle.css"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANANTA INTERIORS</title>
     <meta name="Keywords"
@@ -63,35 +64,37 @@
       <div class="container px-5 py-24 mx-auto flex flex-wrap">
         <div class="flex w-full mb-20 flex-wrap">
           <h1 class="sm:text-3xl text-2xl font-medium title-font text-gray-900 lg:w-1/3 lg:mb-0 mb-4">Alkesh Soni</h1>
-          <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base">Short-About</p>
+          <p class="lg:pl-6 lg:w-2/3 mx-auto leading-relaxed text-base">With a legacy built on trust, innovation, and
+            excellence, we continue to shape the built environment with designs that inspire and endure. Let’s build the
+            future together.
+          </p>
         </div>
         <div class="flex flex-wrap md:-m-2 -m-1">
           <div class="flex flex-wrap w-1/2">
             <div class="md:p-2 p-1 w-1/2">
               <img alt="gallery" class="w-full object-cover h-full object-center block"
-                src="https://dummyimage.com/500x300" />
+                src="Images/NIMBA P-1 (1).jpg" />
             </div>
             <div class="md:p-2 p-1 w-1/2">
               <img alt="gallery" class="w-full object-cover h-full object-center block"
-                src="https://dummyimage.com/501x301" />
+                src="Images/RATAN BHAI RESIDENCE P-3 (9).jpg" />
             </div>
             <div class="md:p-2 p-1 w-full">
               <img alt="gallery" class="w-full h-full object-cover object-center block"
-                src="https://dummyimage.com/600x360" />
+                src="Images/NIMBA P-1 (2).jpg" />
             </div>
           </div>
           <div class="flex flex-wrap w-1/2">
             <div class="md:p-2 p-1 w-full">
-              <img alt="gallery" class="w-full h-full object-cover object-center block"
-                src="https://dummyimage.com/601x361" />
+              <img alt="gallery" class="w-full h-full object-cover object-center block" src="Images/COVER PHOTO.jpg" />
             </div>
             <div class="md:p-2 p-1 w-1/2">
               <img alt="gallery" class="w-full object-cover h-full object-center block"
-                src="https://dummyimage.com/502x302" />
+                src="Images/HARI KASHI NIWAS_P2 (2).jpg" />
             </div>
             <div class="md:p-2 p-1 w-1/2">
               <img alt="gallery" class="w-full object-cover h-full object-center block"
-                src="https://dummyimage.com/503x303" />
+                src="Images/RATAN BHAI RESIDENCE P-3 (4).jpg" />
             </div>
           </div>
         </div>
