--- a/project.html
+++ b/project.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <!-- <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script> -->
+    <script src="Globalstyle.css"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANANTA INTERIORS</title>
     <meta name="Keywords"
@@ -64,14 +65,14 @@
         <div class="flex flex-wrap -m-4">
           <div class="p-4 md:w-1/3">
             <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-              <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/720x400"
+              <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Images/NIMBA P-1 (1).jpg"
                 alt="blog" />
               <div class="p-6">
                 <!-- <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2> -->
-                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 1</h1>
+                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">NIMBA</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a href="project1.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                  <a href="project1.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
@@ -114,14 +115,14 @@
           </div>
           <div class="p-4 md:w-1/3">
             <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-              <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/721x401"
+              <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="Images/HARI KASHI NIWAS_P2 (1).jpg"
                 alt="blog" />
               <div class="p-6">
                 <!-- <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2> -->
-                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 2</h1>
+                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">HARI KASHI NIWAS</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                  <a href="project2.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
@@ -164,14 +165,14 @@
           </div>
           <div class="p-4 md:w-1/3">
             <div class="h-full border-2 border-gray-200 border-opacity-60 rounded-lg overflow-hidden">
-              <img class="lg:h-48 md:h-36 w-full object-cover object-center" src="https://dummyimage.com/722x402"
-                alt="blog" />
+              <img class="lg:h-48 md:h-36 w-full object-cover object-center"
+                src="Images/RATAN BHAI RESIDENCE P-3 (1).jpg" alt="blog" />
               <div class="p-6">
                 <!-- <h2 class="tracking-widest text-xs title-font font-medium text-gray-400 mb-1">CATEGORY</h2> -->
-                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 3</h1>
+                <h1 class="title-font text-lg font-medium text-gray-900 mb-3">RATAN RESIDENCE</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                  <a href="project3.html" class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
@@ -221,7 +222,7 @@
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 4</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
@@ -271,7 +272,7 @@
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 5</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
@@ -321,7 +322,7 @@
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Project 6</h1>
                 <p class="leading-relaxed mb-3">Short Description for the project.</p>
                 <div class="flex items-center flex-wrap">
-                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Learn More
+                  <a class="text-indigo-500 inline-flex items-center md:mb-2 lg:mb-0">Let's Explore
                     <svg class="w-4 h-4 ml-2" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2" fill="none"
                       stroke-linecap="round" stroke-linejoin="round">
                       <path d="M5 12h14"></path>
