--- a/project1.html
+++ b/project1.html
@@ -6,7 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <link rel="icon" href="favicon.ico" type="image/x-icon" />
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-    <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script>
+    <!-- <script src="https://cdn.tailwindcss.com?plugins=forms,typography,aspect-ratio,line-clamp"></script> -->
+    <script src="Globalstyle.css"></script>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ANANTA INTERIORS</title>
     <meta name="Keywords"
@@ -62,16 +63,16 @@
     <section class="text-gray-600 body-font">
       <div class="container px-5 py-24 mx-auto">
         <div class="flex flex-col text-center w-full mb-20">
-          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">Project 1</h1>
+          <h1 class="sm:text-3xl text-2xl font-medium title-font mb-4 text-gray-900">NIMBA</h1>
           <p class="lg:w-2/3 mx-auto leading-relaxed text-base">Project Desription</p>
         </div>
         <div class="flex flex-wrap -m-4">
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
-                src="https://dummyimage.com/600x360" />
+                src="Images/NIMBA P-1 (1).jpg" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
-                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1"> </h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Shooting Stars</h1>
                 <p class="leading-relaxed">
                   Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
@@ -82,9 +83,9 @@
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
-                src="https://dummyimage.com/601x361" />
+                src="Images/NIMBA P-1 (2).jpg" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
-                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1"> </h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The Catalyzer</h1>
                 <p class="leading-relaxed">
                   Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
@@ -97,7 +98,7 @@
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
                 src="https://dummyimage.com/603x363" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
-                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1"> </h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">The 400 Blows</h1>
                 <p class="leading-relaxed">
                   Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
@@ -108,9 +109,9 @@
           <div class="lg:w-1/3 sm:w-1/2 p-4">
             <div class="flex relative">
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
-                src="https://dummyimage.com/602x362" />
+                src="Images/NIMBA P-1 (3).jpg" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
-                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1"> </h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Neptune</h1>
                 <p class="leading-relaxed">
                   Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
@@ -123,7 +124,7 @@
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
                 src="https://dummyimage.com/605x365" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
-                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1"> </h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Holden Caulfield</h1>
                 <p class="leading-relaxed">
                   Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
@@ -136,7 +137,7 @@
               <img alt="gallery" class="absolute inset-0 w-full h-full object-cover object-center"
                 src="https://dummyimage.com/606x366" />
               <div class="px-8 py-10 relative z-10 w-full border-4 border-gray-200 bg-white opacity-0 hover:opacity-80">
-                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1">THE SUBTITLE</h2>
+                <h2 class="tracking-widest text-sm title-font font-medium text-indigo-500 mb-1"> </h2>
                 <h1 class="title-font text-lg font-medium text-gray-900 mb-3">Alper Kamu</h1>
                 <p class="leading-relaxed">
                   Photo booth fam kinfolk cold-pressed sriracha leggings jianbing microdosing tousled waistcoat.
